//
//  MovieSceneAccessibilityIdentifier.swift
//  MovieTrailers
//
//  Created by Toheed Jahan Khan on 16/07/22.
//

import Foundation

public struct MovieSceneAccessibilityIdentifier {
    static let movieDetailsView = "movieDetailsView"
    static let searchField = "searchField"
    static let movieTableView = "movieTableView"
}

